[project]
name = "cloudscraper-mcp-server"
version = "0.1.0"
description = "MCP Server for CloudScraper - Bypass Cloudflare restrictions for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "cloudscraper>=1.2.71",
    "brotli>=1.0.9",
    "beautifulsoup4>=4.10.0",
    "markdownify>=0.11.6",
]
